# esp-web-tools-custom-offline-firmware

./: README.md  index.html
manifest-gen/: Cargo.toml  README.md
manifest-gen/src/: main.rs
src/: connect.ts  const.ts  flash.ts  install-button.ts  install-dialog.ts
